tests/miniJava/neg/006848_mutation.MiniJava
class void java { public static void Main ( String [ ] java ) { { } } }
